--- a/final/README
+++ b/final/README
@@ -1,2 +1,9 @@
 项目名称：
 麦门——麦当劳产品营养成分你知多少
+
+文件结构：
+原数据集：menu.csv
+实验报告（包括实验代码）:实验报告.ipynb
+作品介绍：作品介绍.pptx
+作品介绍视频：链接：https://pan.baidu.com/s/17cZASd7Lts7_6PpsUcJFaA?pwd=xz0i 提取码：xz0i（文件过大，请使用百度网盘查看）
+实验代码纯享版：analysis_of_McDonald's_menu.ipynb
